parsetiger.output
Terminals unused in grammar

    "_cast"


State 2 conflicts: 1 reduce/reduce
State 23 conflicts: 1 shift/reduce


Grammar

    0 $accept: program "end of file"

    1 program: exp
    2        | chunks

    3 exps: exp
    4     | exp ";" exps

    5 record_creation: "identifier" "=" exp
    6                | "identifier" "=" exp record_init

    7 record_init: "," "identifier" "=" exp
    8            | "," "identifier" "=" exp record_init

    9 function_param: exp
   10               | exp "," function_param

   11 exp: "integer"
   12    | "nil"
   13    | "string"
   14    | typeid "[" exp "]" "of" exp
   15    | typeid "{" "}"
   16    | typeid "{" record_creation "}"
   17    | lvalue
   18    | "identifier" "(" ")"
   19    | "identifier" "(" function_param ")"
   20    | "-" exp
   21    | exp "+" exp
   22    | exp "-" exp
   23    | exp "*" exp
   24    | exp "/" exp
   25    | exp "=" exp
   26    | exp "<>" exp
   27    | exp ">" exp
   28    | exp "<" exp
   29    | exp ">=" exp
   30    | exp "<=" exp
   31    | exp "&" exp
   32    | exp "|" exp
   33    | "(" ")"
   34    | "(" exps ")"
   35    | lvalue ":=" exp
   36    | "if" exp "then" exp
   37    | "if" exp "then" exp "else" exp
   38    | "while" exp "do" exp
   39    | "for" "identifier" ":=" exp "to" exp "do" exp
   40    | "break"
   41    | "let" chunks "in" "end"
   42    | "let" chunks "in" exps "end"
   43    | "new" typeid
   44    | lvalue "." "identifier" "(" ")"
   45    | lvalue "." "identifier" "(" function_param ")"

   46 lvalue: "identifier"
   47       | lvalue "." "identifier"
   48       | lvalue "[" exp "]"

   49 vardec: "var" "identifier" ":=" exp
   50       | "var" "identifier" ":" typeid ":=" exp

   51 fundec: "function" "identifier" "(" tyfields ")" "=" exp
   52       | "function" "identifier" "(" tyfields ")" ":" typeid "=" exp
   53       | "primitive" "identifier" "(" tyfields ")"
   54       | "primitive" "identifier" "(" tyfields ")" ":" typeid

   55 funchunk: fundec
   56         | fundec funchunk

   57 varchunk: vardec
   58         | vardec varchunk

   59 chunks: ε
   60       | tychunk chunks
   61       | funchunk chunks
   62       | varchunk chunks
   63       | "import" "string" chunks

   64 tychunk: tydec
   65        | tydec tychunk

   66 tydec: "type" "identifier" "=" ty
   67      | "class" "identifier" "{" classfields "}"
   68      | "class" "identifier" "extends" typeid "{" classfields "}"

   69 ty: typeid
   70   | "{" tyfields "}"
   71   | "array" "of" typeid
   72   | "class" "{" classfields "}"
   73   | "class" "extends" typeid "{" classfields "}"

   74 classfields: ε
   75            | vardec classfields
   76            | "method" "identifier" "(" tyfields ")" "=" exp classfields
   77            | "method" "identifier" "(" tyfields ")" ":" typeid "=" exp classfields

   78 tyfields: ε
   79         | tyfields.1

   80 tyfields.1: tyfields.1 "," tyfield
   81           | tyfield

   82 tyfield: "identifier" ":" typeid

   83 typeid: "identifier"
   84       | "_namety" "(" "integer" ")"


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    "string" <std::string> (258) 13 63
    "identifier" <misc::symbol> (259) 5 6 7 8 18 19 39 44 45 46 47 49 50 51 52 53 54 66 67 68 76 77 82 83
    "integer" <int> (260) 11 84
    "&" (261) 31
    "array" (262) 71
    ":=" (263) 35 39 49 50
    "break" (264) 40
    "_cast" (265)
    "class" (266) 67 68 72 73
    ":" (267) 50 52 54 77 82
    "," (268) 7 8 10 80
    "/" (269) 24
    "do" (270) 38 39
    "." (271) 44 45 47
    "else" (272) 37
    "end" (273) 41 42
    "=" (274) 5 6 7 8 25 51 52 66 76 77
    "extends" (275) 68 73
    "for" (276) 39
    "function" (277) 51 52
    ">=" (278) 29
    ">" (279) 27
    "if" (280) 36 37
    "import" (281) 63
    "in" (282) 41 42
    "{" (283) 15 16 67 68 70 72 73
    "[" (284) 14 48
    "<=" (285) 30
    "let" (286) 41 42
    "(" (287) 18 19 33 34 44 45 51 52 53 54 76 77 84
    "<" (288) 28
    "-" (289) 20 22
    "method" (290) 76 77
    "<>" (291) 26
    "new" (292) 43
    "nil" (293) 12
    "of" (294) 14 71
    "|" (295) 32
    "+" (296) 21
    "primitive" (297) 53 54
    "}" (298) 15 16 67 68 70 72 73
    "]" (299) 14 48
    ")" (300) 18 19 33 34 44 45 51 52 53 54 76 77 84
    ";" (301) 4
    "then" (302) 36 37
    "*" (303) 23
    "to" (304) 39
    "type" (305) 66
    "var" (306) 49 50
    "while" (307) 38
    UMINUS (308)
    "_chunks" (309)
    "_namety" (310) 84


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    program (57)
        on left: 1 2
        on right: 0
    exps <ast::Exp*> (58)
        on left: 3 4
        on right: 4 34 42
    record_creation <ast::fieldinits_type*> (59)
        on left: 5 6
        on right: 16
    record_init <ast::fieldinits_type*> (60)
        on left: 7 8
        on right: 6 8
    function_param <ast::exps_type*> (61)
        on left: 9 10
        on right: 10 19 45
    exp <ast::Exp*> (62)
        on left: 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 1 3 4 5 6 7 8 9 10 14 20 21 22 23 24 25 26 27 28 29 30 31 32 35 36 37 38 39 48 49 50 51 52 76 77
    lvalue <ast::Var*> (63)
        on left: 46 47 48
        on right: 17 35 44 45 47 48
    vardec <ast::VarDec*> (64)
        on left: 49 50
        on right: 57 58 75
    fundec <ast::FunctionDec*> (65)
        on left: 51 52 53 54
        on right: 55 56
    funchunk <ast::FunctionChunk*> (66)
        on left: 55 56
        on right: 56 61
    varchunk <ast::VarChunk*> (67)
        on left: 57 58
        on right: 58 62
    chunks <ast::ChunkList*> (68)
        on left: 59 60 61 62 63
        on right: 2 41 42 60 61 62 63
    tychunk <ast::TypeChunk*> (69)
        on left: 64 65
        on right: 60 65
    tydec <ast::TypeDec*> (70)
        on left: 66 67 68
        on right: 64 65
    ty <ast::Ty*> (71)
        on left: 69 70 71 72 73
        on right: 66
    classfields (72)
        on left: 74 75 76 77
        on right: 67 68 72 73 75 76 77
    tyfields <ast::fields_type*> (73)
        on left: 78 79
        on right: 51 52 53 54 70 76 77
    tyfields.1 <ast::fields_type*> (74)
        on left: 80 81
        on right: 79 80
    tyfield <ast::Field*> (75)
        on left: 82
        on right: 80 81
    typeid <ast::NameTy*> (76)
        on left: 83 84
        on right: 14 15 16 43 50 52 54 68 69 71 73 77 82


State 0

    0 $accept: • program "end of file"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "class"       shift, and go to state 5
    "for"         shift, and go to state 6
    "function"    shift, and go to state 7
    "if"          shift, and go to state 8
    "import"      shift, and go to state 9
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "primitive"   shift, and go to state 15
    "type"        shift, and go to state 16
    "var"         shift, and go to state 17
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    $default  reduce using rule 59 (chunks)

    program   go to state 20
    exp       go to state 21
    lvalue    go to state 22
    vardec    go to state 23
    fundec    go to state 24
    funchunk  go to state 25
    varchunk  go to state 26
    chunks    go to state 27
    tychunk   go to state 28
    tydec     go to state 29
    typeid    go to state 30


State 1

   13 exp: "string" •

    $default  reduce using rule 13 (exp)


State 2

   18 exp: "identifier" • "(" ")"
   19    | "identifier" • "(" function_param ")"
   46 lvalue: "identifier" •
   83 typeid: "identifier" •

    "("  shift, and go to state 31

    "{"       reduce using rule 83 (typeid)
    "["       reduce using rule 46 (lvalue)
    "["       [reduce using rule 83 (typeid)]
    $default  reduce using rule 46 (lvalue)


State 3

   11 exp: "integer" •

    $default  reduce using rule 11 (exp)


State 4

   40 exp: "break" •

    $default  reduce using rule 40 (exp)


State 5

   67 tydec: "class" • "identifier" "{" classfields "}"
   68      | "class" • "identifier" "extends" typeid "{" classfields "}"

    "identifier"  shift, and go to state 32


State 6

   39 exp: "for" • "identifier" ":=" exp "to" exp "do" exp

    "identifier"  shift, and go to state 33


State 7

   51 fundec: "function" • "identifier" "(" tyfields ")" "=" exp
   52       | "function" • "identifier" "(" tyfields ")" ":" typeid "=" exp

    "identifier"  shift, and go to state 34


State 8

   36 exp: "if" • exp "then" exp
   37    | "if" • exp "then" exp "else" exp

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 35
    lvalue  go to state 22
    typeid  go to state 30


State 9

   63 chunks: "import" • "string" chunks

    "string"  shift, and go to state 36


State 10

   41 exp: "let" • chunks "in" "end"
   42    | "let" • chunks "in" exps "end"

    "class"      shift, and go to state 5
    "function"   shift, and go to state 7
    "import"     shift, and go to state 9
    "primitive"  shift, and go to state 15
    "type"       shift, and go to state 16
    "var"        shift, and go to state 17

    $default  reduce using rule 59 (chunks)

    vardec    go to state 23
    fundec    go to state 24
    funchunk  go to state 25
    varchunk  go to state 26
    chunks    go to state 37
    tychunk   go to state 28
    tydec     go to state 29


State 11

   33 exp: "(" • ")"
   34    | "(" • exps ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    ")"           shift, and go to state 38
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exps    go to state 39
    exp     go to state 40
    lvalue  go to state 22
    typeid  go to state 30


State 12

   20 exp: "-" • exp

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 41
    lvalue  go to state 22
    typeid  go to state 30


State 13

   43 exp: "new" • typeid

    "identifier"  shift, and go to state 42
    "_namety"     shift, and go to state 19

    typeid  go to state 43


State 14

   12 exp: "nil" •

    $default  reduce using rule 12 (exp)


State 15

   53 fundec: "primitive" • "identifier" "(" tyfields ")"
   54       | "primitive" • "identifier" "(" tyfields ")" ":" typeid

    "identifier"  shift, and go to state 44


State 16

   66 tydec: "type" • "identifier" "=" ty

    "identifier"  shift, and go to state 45


State 17

   49 vardec: "var" • "identifier" ":=" exp
   50       | "var" • "identifier" ":" typeid ":=" exp

    "identifier"  shift, and go to state 46


State 18

   38 exp: "while" • exp "do" exp

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 47
    lvalue  go to state 22
    typeid  go to state 30


State 19

   84 typeid: "_namety" • "(" "integer" ")"

    "("  shift, and go to state 48


State 20

    0 $accept: program • "end of file"

    "end of file"  shift, and go to state 49


State 21

    1 program: exp •
   21 exp: exp • "+" exp
   22    | exp • "-" exp
   23    | exp • "*" exp
   24    | exp • "/" exp
   25    | exp • "=" exp
   26    | exp • "<>" exp
   27    | exp • ">" exp
   28    | exp • "<" exp
   29    | exp • ">=" exp
   30    | exp • "<=" exp
   31    | exp • "&" exp
   32    | exp • "|" exp

    "&"   shift, and go to state 50
    "/"   shift, and go to state 51
    "="   shift, and go to state 52
    ">="  shift, and go to state 53
    ">"   shift, and go to state 54
    "<="  shift, and go to state 55
    "<"   shift, and go to state 56
    "-"   shift, and go to state 57
    "<>"  shift, and go to state 58
    "|"   shift, and go to state 59
    "+"   shift, and go to state 60
    "*"   shift, and go to state 61

    $default  reduce using rule 1 (program)


State 22

   17 exp: lvalue •
   35    | lvalue • ":=" exp
   44    | lvalue • "." "identifier" "(" ")"
   45    | lvalue • "." "identifier" "(" function_param ")"
   47 lvalue: lvalue • "." "identifier"
   48       | lvalue • "[" exp "]"

    ":="  shift, and go to state 62
    "."   shift, and go to state 63
    "["   shift, and go to state 64

    $default  reduce using rule 17 (exp)


State 23

   57 varchunk: vardec •
   58         | vardec • varchunk

    "var"  shift, and go to state 17

    "var"     [reduce using rule 57 (varchunk)]
    $default  reduce using rule 57 (varchunk)

    vardec    go to state 23
    varchunk  go to state 65


State 24

   55 funchunk: fundec •
   56         | fundec • funchunk

    "function"   shift, and go to state 7
    "primitive"  shift, and go to state 15

    $default  reduce using rule 55 (funchunk)

    fundec    go to state 24
    funchunk  go to state 66


State 25

   61 chunks: funchunk • chunks

    "class"      shift, and go to state 5
    "function"   shift, and go to state 7
    "import"     shift, and go to state 9
    "primitive"  shift, and go to state 15
    "type"       shift, and go to state 16
    "var"        shift, and go to state 17

    $default  reduce using rule 59 (chunks)

    vardec    go to state 23
    fundec    go to state 24
    funchunk  go to state 25
    varchunk  go to state 26
    chunks    go to state 67
    tychunk   go to state 28
    tydec     go to state 29


State 26

   62 chunks: varchunk • chunks

    "class"      shift, and go to state 5
    "function"   shift, and go to state 7
    "import"     shift, and go to state 9
    "primitive"  shift, and go to state 15
    "type"       shift, and go to state 16
    "var"        shift, and go to state 17

    $default  reduce using rule 59 (chunks)

    vardec    go to state 23
    fundec    go to state 24
    funchunk  go to state 25
    varchunk  go to state 26
    chunks    go to state 68
    tychunk   go to state 28
    tydec     go to state 29


State 27

    2 program: chunks •

    $default  reduce using rule 2 (program)


State 28

   60 chunks: tychunk • chunks

    "class"      shift, and go to state 5
    "function"   shift, and go to state 7
    "import"     shift, and go to state 9
    "primitive"  shift, and go to state 15
    "type"       shift, and go to state 16
    "var"        shift, and go to state 17

    $default  reduce using rule 59 (chunks)

    vardec    go to state 23
    fundec    go to state 24
    funchunk  go to state 25
    varchunk  go to state 26
    chunks    go to state 69
    tychunk   go to state 28
    tydec     go to state 29


State 29

   64 tychunk: tydec •
   65        | tydec • tychunk

    "class"  shift, and go to state 5
    "type"   shift, and go to state 16

    $default  reduce using rule 64 (tychunk)

    tychunk  go to state 70
    tydec    go to state 29


State 30

   14 exp: typeid • "[" exp "]" "of" exp
   15    | typeid • "{" "}"
   16    | typeid • "{" record_creation "}"

    "{"  shift, and go to state 71
    "["  shift, and go to state 72


State 31

   18 exp: "identifier" "(" • ")"
   19    | "identifier" "(" • function_param ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    ")"           shift, and go to state 73
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    function_param  go to state 74
    exp             go to state 75
    lvalue          go to state 22
    typeid          go to state 30


State 32

   67 tydec: "class" "identifier" • "{" classfields "}"
   68      | "class" "identifier" • "extends" typeid "{" classfields "}"

    "extends"  shift, and go to state 76
    "{"        shift, and go to state 77


State 33

   39 exp: "for" "identifier" • ":=" exp "to" exp "do" exp

    ":="  shift, and go to state 78


State 34

   51 fundec: "function" "identifier" • "(" tyfields ")" "=" exp
   52       | "function" "identifier" • "(" tyfields ")" ":" typeid "=" exp

    "("  shift, and go to state 79


State 35

   21 exp: exp • "+" exp
   22    | exp • "-" exp
   23    | exp • "*" exp
   24    | exp • "/" exp
   25    | exp • "=" exp
   26    | exp • "<>" exp
   27    | exp • ">" exp
   28    | exp • "<" exp
   29    | exp • ">=" exp
   30    | exp • "<=" exp
   31    | exp • "&" exp
   32    | exp • "|" exp
   36    | "if" exp • "then" exp
   37    | "if" exp • "then" exp "else" exp

    "&"     shift, and go to state 50
    "/"     shift, and go to state 51
    "="     shift, and go to state 52
    ">="    shift, and go to state 53
    ">"     shift, and go to state 54
    "<="    shift, and go to state 55
    "<"     shift, and go to state 56
    "-"     shift, and go to state 57
    "<>"    shift, and go to state 58
    "|"     shift, and go to state 59
    "+"     shift, and go to state 60
    "then"  shift, and go to state 80
    "*"     shift, and go to state 61


State 36

   63 chunks: "import" "string" • chunks

    "class"      shift, and go to state 5
    "function"   shift, and go to state 7
    "import"     shift, and go to state 9
    "primitive"  shift, and go to state 15
    "type"       shift, and go to state 16
    "var"        shift, and go to state 17

    $default  reduce using rule 59 (chunks)

    vardec    go to state 23
    fundec    go to state 24
    funchunk  go to state 25
    varchunk  go to state 26
    chunks    go to state 81
    tychunk   go to state 28
    tydec     go to state 29


State 37

   41 exp: "let" chunks • "in" "end"
   42    | "let" chunks • "in" exps "end"

    "in"  shift, and go to state 82


State 38

   33 exp: "(" ")" •

    $default  reduce using rule 33 (exp)


State 39

   34 exp: "(" exps • ")"

    ")"  shift, and go to state 83


State 40

    3 exps: exp •
    4     | exp • ";" exps
   21 exp: exp • "+" exp
   22    | exp • "-" exp
   23    | exp • "*" exp
   24    | exp • "/" exp
   25    | exp • "=" exp
   26    | exp • "<>" exp
   27    | exp • ">" exp
   28    | exp • "<" exp
   29    | exp • ">=" exp
   30    | exp • "<=" exp
   31    | exp • "&" exp
   32    | exp • "|" exp

    "&"   shift, and go to state 50
    "/"   shift, and go to state 51
    "="   shift, and go to state 52
    ">="  shift, and go to state 53
    ">"   shift, and go to state 54
    "<="  shift, and go to state 55
    "<"   shift, and go to state 56
    "-"   shift, and go to state 57
    "<>"  shift, and go to state 58
    "|"   shift, and go to state 59
    "+"   shift, and go to state 60
    ";"   shift, and go to state 84
    "*"   shift, and go to state 61

    $default  reduce using rule 3 (exps)


State 41

   20 exp: "-" exp •
   21    | exp • "+" exp
   22    | exp • "-" exp
   23    | exp • "*" exp
   24    | exp • "/" exp
   25    | exp • "=" exp
   26    | exp • "<>" exp
   27    | exp • ">" exp
   28    | exp • "<" exp
   29    | exp • ">=" exp
   30    | exp • "<=" exp
   31    | exp • "&" exp
   32    | exp • "|" exp

    $default  reduce using rule 20 (exp)


State 42

   83 typeid: "identifier" •

    $default  reduce using rule 83 (typeid)


State 43

   43 exp: "new" typeid •

    $default  reduce using rule 43 (exp)


State 44

   53 fundec: "primitive" "identifier" • "(" tyfields ")"
   54       | "primitive" "identifier" • "(" tyfields ")" ":" typeid

    "("  shift, and go to state 85


State 45

   66 tydec: "type" "identifier" • "=" ty

    "="  shift, and go to state 86


State 46

   49 vardec: "var" "identifier" • ":=" exp
   50       | "var" "identifier" • ":" typeid ":=" exp

    ":="  shift, and go to state 87
    ":"   shift, and go to state 88


State 47

   21 exp: exp • "+" exp
   22    | exp • "-" exp
   23    | exp • "*" exp
   24    | exp • "/" exp
   25    | exp • "=" exp
   26    | exp • "<>" exp
   27    | exp • ">" exp
   28    | exp • "<" exp
   29    | exp • ">=" exp
   30    | exp • "<=" exp
   31    | exp • "&" exp
   32    | exp • "|" exp
   38    | "while" exp • "do" exp

    "&"   shift, and go to state 50
    "/"   shift, and go to state 51
    "do"  shift, and go to state 89
    "="   shift, and go to state 52
    ">="  shift, and go to state 53
    ">"   shift, and go to state 54
    "<="  shift, and go to state 55
    "<"   shift, and go to state 56
    "-"   shift, and go to state 57
    "<>"  shift, and go to state 58
    "|"   shift, and go to state 59
    "+"   shift, and go to state 60
    "*"   shift, and go to state 61


State 48

   84 typeid: "_namety" "(" • "integer" ")"

    "integer"  shift, and go to state 90


State 49

    0 $accept: program "end of file" •

    $default  accept


State 50

   31 exp: exp "&" • exp

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 91
    lvalue  go to state 22
    typeid  go to state 30


State 51

   24 exp: exp "/" • exp

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 92
    lvalue  go to state 22
    typeid  go to state 30


State 52

   25 exp: exp "=" • exp

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 93
    lvalue  go to state 22
    typeid  go to state 30


State 53

   29 exp: exp ">=" • exp

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 94
    lvalue  go to state 22
    typeid  go to state 30


State 54

   27 exp: exp ">" • exp

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 95
    lvalue  go to state 22
    typeid  go to state 30


State 55

   30 exp: exp "<=" • exp

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 96
    lvalue  go to state 22
    typeid  go to state 30


State 56

   28 exp: exp "<" • exp

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 97
    lvalue  go to state 22
    typeid  go to state 30


State 57

   22 exp: exp "-" • exp

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 98
    lvalue  go to state 22
    typeid  go to state 30


State 58

   26 exp: exp "<>" • exp

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 99
    lvalue  go to state 22
    typeid  go to state 30


State 59

   32 exp: exp "|" • exp

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 100
    lvalue  go to state 22
    typeid  go to state 30


State 60

   21 exp: exp "+" • exp

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 101
    lvalue  go to state 22
    typeid  go to state 30


State 61

   23 exp: exp "*" • exp

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 102
    lvalue  go to state 22
    typeid  go to state 30


State 62

   35 exp: lvalue ":=" • exp

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 103
    lvalue  go to state 22
    typeid  go to state 30


State 63

   44 exp: lvalue "." • "identifier" "(" ")"
   45    | lvalue "." • "identifier" "(" function_param ")"
   47 lvalue: lvalue "." • "identifier"

    "identifier"  shift, and go to state 104


State 64

   48 lvalue: lvalue "[" • exp "]"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 105
    lvalue  go to state 22
    typeid  go to state 30


State 65

   58 varchunk: vardec varchunk •

    $default  reduce using rule 58 (varchunk)


State 66

   56 funchunk: fundec funchunk •

    $default  reduce using rule 56 (funchunk)


State 67

   61 chunks: funchunk chunks •

    $default  reduce using rule 61 (chunks)


State 68

   62 chunks: varchunk chunks •

    $default  reduce using rule 62 (chunks)


State 69

   60 chunks: tychunk chunks •

    $default  reduce using rule 60 (chunks)


State 70

   65 tychunk: tydec tychunk •

    $default  reduce using rule 65 (tychunk)


State 71

   15 exp: typeid "{" • "}"
   16    | typeid "{" • record_creation "}"

    "identifier"  shift, and go to state 106
    "}"           shift, and go to state 107

    record_creation  go to state 108


State 72

   14 exp: typeid "[" • exp "]" "of" exp

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 109
    lvalue  go to state 22
    typeid  go to state 30


State 73

   18 exp: "identifier" "(" ")" •

    $default  reduce using rule 18 (exp)


State 74

   19 exp: "identifier" "(" function_param • ")"

    ")"  shift, and go to state 110


State 75

    9 function_param: exp •
   10               | exp • "," function_param
   21 exp: exp • "+" exp
   22    | exp • "-" exp
   23    | exp • "*" exp
   24    | exp • "/" exp
   25    | exp • "=" exp
   26    | exp • "<>" exp
   27    | exp • ">" exp
   28    | exp • "<" exp
   29    | exp • ">=" exp
   30    | exp • "<=" exp
   31    | exp • "&" exp
   32    | exp • "|" exp
